# sdl_empty_window

./: .gitmodules  CMakeLists.txt  main.cpp
include/SDL3/: SDL_custom.h
include/upper/: upper.hpp
lib/: upper.cpp
lib/SDL3/: SDL_custom.cpp
lib/inner/: CMakeLists.txt
lib/inner/include/inner/: inner.hpp
lib/inner/lib/: inner.cpp
